Add new texture variant

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<a-assets>
 
 		<a-asset-item class='model box' src='models/box.obj'></a-asset-item>
-		<img class='texture maze' src='textures/maze.jpg'></a-asset>
+		<img class='texture maze' src='textures/maze.jpg'></img>
+		<img class='texture polkadot' src='textures/polkadot.png'></img>
 		<a-mixin id='tie'
 			n-skeleton-parent='part: neck' rotation='0 90 0' position='0 -0.03 -0.07'
 			collapse-model sync sync-n-skeleton-parent
