--- a/menu.html
+++ b/menu.html
@@ -14,17 +14,11 @@
 			<li id='none' data-wearable>
 				(None)
 			</li>
-			<li id='maze-tie' data-wearable='box/maze'>
+			<li data-wearable='box/maze'>
 				<img src='thumbnails/maze.jpg' />
 			</li>
-			<li id='maze-tie' data-wearable='box/maze'>
-				<img src='thumbnails/maze.jpg' />
-			</li>
-			<li id='maze-tie' data-wearable='box/maze'>
-				<img src='thumbnails/maze.jpg' />
-			</li>
-			<li id='maze-tie' data-wearable='box/maze'>
-				<img src='thumbnails/maze.jpg' />
+			<li data-wearable='box/polkadot'>
+				<img src='thumbnails/polkadot.jpg' />
 			</li>
 		</ol>
 	</div>
