--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js'></script>
 	<!--script src='https://sdk.altvr.com/libs/altspace.js/2.6.0/altspace.min.js'></script-->
 	<script src='lib/altspace.js'></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Varela+Round" rel="stylesheet">
 	<link rel='stylesheet' href='menu.css'/>
 </head>
 <body>
