--- a/menu.html
+++ b/menu.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Wearable (Menu)</title>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js'></script>
-	<!--script src='https://sdk.altvr.com/libs/altspace.js/2.6.0/altspace.min.js'></script-->
-	<script src='lib/altspace.js'></script>
+	<script src='https://sdk.altvr.com/libs/altspace.js/2.6.0/altspace.min.js'></script>
+	<!--script src='lib/altspace.js'></script-->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Varela+Round" rel="stylesheet">
 	<link rel='stylesheet' href='menu.css'/>
 </head>
