Create readme, generalize parts of system

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <body>
 	<div id='container'>
 		<h1>Choose your tie:</h1>
-		<ol class='wearable-selector' data-wearable-group='neck'>
+		<ul class='wearable-selector' data-wearable-group='neck'>
 			<li id='none' data-wearable>
 				(None)
 			</li>
@@ -21,7 +21,7 @@
 			<li data-wearable='box/polkadot'>
 				<img src='thumbnails/polkadot.jpg' />
 			</li>
-		</ol>
+		</ul>
 	</div>
 
 	<script src='wearable-menu.js'></script>
