--- a/menu.html
+++ b/menu.html
@@ -15,11 +15,17 @@
 			<li id='none' data-wearable>
 				(None)
 			</li>
-			<li data-wearable='box/maze'>
-				<img src='thumbnails/maze.jpg' />
+			<li data-wearable='Tie1/BillNyeTies'>
+				<img src='thumbnails/Rubenoid_BillNye_Tie1.png' />
 			</li>
-			<li data-wearable='box/polkadot'>
-				<img src='thumbnails/polkadot.jpg' />
+			<li data-wearable='Tie2/BillNyeTies'>
+				<img src='thumbnails/Rubenoid_BillNye_Tie2.png' />
+			</li>
+			<li data-wearable='Tie3/BillNyeTies'>
+				<img src='thumbnails/Rubenoid_BillNye_Tie3.png' />
+			</li>
+			<li data-wearable='Tie4/BillNyeTies'>
+				<img src='thumbnails/Rubenoid_BillNye_Tie4.png' />
 			</li>
 		</ul>
 	</div>
