Fix tie rotation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<!-- mixins -->
 		<a-mixin id='tie'
-			n-skeleton-parent='part: neck' scale='0.01 0.01 0.01'
+			n-skeleton-parent='part: neck' rotation='0 180 0' scale='0.01 0.01 0.01'
 			collapse-model sync sync-n-skeleton-parent
 			obj-model material='shader: flat' wearable='group: neck'
 			fit-to-avatar sync-transform
