--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src='wearable-aframe.js'></script>
 </head>
 <body>
-<a-scene altspace='fullspace: true' sync-system='app: Wearables; author: AltspaceVR;' wearable-menu>
+<a-scene altspace='fullspace: true' sync-system='app: Wearables; author: AltspaceVR; base-ref: https://altspace-wearables.firebaseio.com/;' wearable-menu>
 
 	<a-assets>
 
