--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<title>Wearable</title>
 	<script src='https://aframe.io/releases/0.3.0/aframe.min.js'></script>
-	<script src='https://sdk.altvr.com/libs/altspace.js/2.6.0/altspace.min.js'></script>
-	<!--script src='lib/altspace.js'></script-->
+	<script src='lib/altspace.js?v=1'></script>
 	<script src='wearable-aframe.js'></script>
 </head>
 <body>
